@@ -169,6 +169,7 @@ function ngg_default_options() {
 	$ngg_options['galSortDir']			= 'ASC';						// Sort direction
 	$ngg_options['galNoPages']   		= true;							// use no subpages for gallery
 	$ngg_options['galImgBrowser']   	= false;						// Show ImageBrowser, instead effect
+	$ngg_options['galHiddenImg']   		= false;						// For paged galleries we can hide image
 
 	// Thumbnail Effect
 	$ngg_options['thumbEffect']			= 'shutter';  					// select effect
